fix: fixed border on safari

--- a/src/components/PopUp/popup.module.css
+++ b/src/components/PopUp/popup.module.css
@@ -23,7 +23,7 @@
   padding-bottom: 40px;
   width: 100%;
   height: calc(100% - 40px);
-  outline: solid 2px #d4d4ef;
+  border: solid 2px #d4d4ef;
   background: linear-gradient(45deg, #1f044c, #003480);
   display: flex;
   align-items: center;
